# smart-travel-planner

./: .gitignore  README.md  create_tables.py  docker-compose.yml  main.py  pyproject.toml
app/: config.py  dependencies.py  lifespan.py  main.py
app/agents/: travel_agent.py
app/api/routers/: agent.py  auth.py  predict.py  rag.py  tools.py  weather.py
app/db/: base.py  models.py  session.py
app/llm/: costs.py  gemini_client.py
app/ml/: predictor.py
app/ml/artifacts/: feature_columns.pkl  travel_style_classifier.pkl
app/rag/: chunker.py  embedder.py  ingestion.py  loader.py  retriever.py  store.py
app/schemas/: agent.py  auth.py  ml.py  rag.py  tools.py  weather.py
app/services/: auth.py  tool_runner.py  weather.py
app/tools/: call.py  classify_style.py  destination_search.py  registry.py  weather_tool.py
app/utils/: logging.py  travel_style.py
data/knowledge/: cleaned_dataset.csv  rag_documents.csv
data/knowledge/config/: rag_destinations.csv
data/knowledge/raw_pages/: README.md  athens.html  bali.html  barcelona.html  dubai.html  kyoto.html  lisbon.html  madeira.html  marrakech.html  orlando.html  phuket.html  reykjavík.html  singapore.html
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  api.js  styles.css
frontend/src/components/: AuthCard.jsx  ChatMessage.jsx  ChatPage.jsx  ToolLogsPanel.jsx
scripts/: build_rag_documents.py  ingest_rag.py
tests/: test_gemini_fallback.py  test_llm_costs.py  test_settings_gemini_env.py  test_tool_registry.py  test_travel_style_normalization.py
